--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,15 @@
   border-radius: 10px;
 }
 
+.keypad {
+  margin: 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .key-reg {
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   background-color: #F18F01;
   color: black;
   display: flex;
@@ -37,5 +43,5 @@
   align-items: center;
   border: 1px solid black;
   border-radius: 4px;
-  box-shadow: 5px 5px 8px #695958;
+  box-shadow: 3px 3px 5px #695958;
 }
