--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: 'Times New Roman', Times, serif
+}
+
+.header {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: -15px
 }
 
 .calc-body {
